<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <!-- Event Type Spinner -->
    <TextView
        android:id="@+id/event_type_hint"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:ems="10"
        android:hint="@string/event_type_hint" />

    <Spinner
        android:id="@+id/eventTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:prompt="@string/event_type_hint" />



    <!-- Age Section -->
    <TextView
        android:id="@+id/ageHintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="@string/age_hint" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp" />

    <!-- Pace Section -->
    <TextView
        android:id="@+id/paceHintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="@string/pace_hint" />

    <EditText
        android:id="@+id/paceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp" />

    <!-- Level Section -->
    <TextView
        android:id="@+id/levelHintTextView"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:ems="8"
        android:hint="@string/level_hint" />

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:prompt="@string/level_hint" />

    <!-- Event Details TextView and EditText -->
    <TextView
        android:id="@+id/eventDetailsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="@string/event_details_hint" />

    <EditText
        android:id="@+id/eventDetailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- Add Event Button -->
    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#C0B7D3"
        android:gravity="center"
        android:text="@string/addevent_button_text" />


</LinearLayout>
